# s4

./: apptainer.def  pyproject.toml  run.sh
configs/: config.yaml
configs/experiment/lra/: s4-cifar.yaml
src/models/sequence/backbones/: block.py  model.py
src/models/sequence/modules/: s4block.py
