[tool.poetry]
name = "s4"
version = "0.1.0"
description = "A package for benchmarking sequential architectures on sythentic datasets"
authors = ["A"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pytorch-lightning = "2.0.4"
scipy = "^1.16.0"
pandas = "^2.3.1"
scikit-learn = "^1.7.1"
matplotlib = "^3.10.3"
tqdm = "^4.67.1"
lit = "^18.1.8"
hydra-core = "^1.3.2"
omegaconf = "^2.3.0"
wandb = "^0.21.0"
einops = "^0.8.1"
datasets = "^4.0.0"
torch = "^2.1.0"
torchtext = "^0.16.0"
torchvision = "^0.16.0"
numpy = "<2.0"
torchaudio = "^2.1.0"
transformers = "^4.54.0"
rich = "^13.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
